--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.project.blupandora.donatelife"
+        applicationId "com.project.bluepandora.donatelife"
         minSdkVersion 7
         targetSdkVersion 21
         versionCode 1
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/volley.jar')
     compile 'com.android.support:appcompat-v7:21.0.0'
+    compile files('libs/gcm.jar')
 }
