--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,12 @@
             android:theme="@style/ThemeReg" />
 
         <activity
+            android:name="com.project.bluepandora.blooddonation.activities.FeedbackActivity"
+            android:icon="@null"
+            android:screenOrientation="portrait"
+            android:theme="@style/ThemeFeedback" />
+
+        <activity
             android:name="com.project.bluepandora.blooddonation.activities.MainActivity"
             android:icon="@null"
             android:theme="@style/ThemeFeed" />
