--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
     <uses-configuration android:reqHardKeyboard="false" />
 
     <application
-        android:name="com.project.bluepandora.blooddonation.application.AppController"
+        android:name=".application.AppController"
         android:allowBackup="true"
         android:configChanges="keyboardHidden|orientation"
         android:icon="@drawable/ic_launcher"
@@ -47,7 +47,7 @@
         <service android:name=".GCMIntentService" />
 
         <activity
-            android:name="com.project.bluepandora.blooddonation.activities.StartActivity"
+            android:name=".activities.StartActivity"
             android:configChanges="keyboardHidden"
             android:icon="@null"
             android:screenOrientation="portrait"
@@ -63,26 +63,26 @@
                 android:value="AIzaSyBZ5kDCzgQOSJd4ZcHNRt_HOLsPa6aZcw8" />
         </activity>
         <activity
-            android:name="com.project.bluepandora.blooddonation.activities.LogInActivity"
+            android:name=".activities.LogInActivity"
             android:configChanges="keyboardHidden"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/ThemeReg" />
         <activity
-            android:name="com.project.bluepandora.blooddonation.activities.SignUpActivity"
+            android:name=".activities.SignUpActivity"
             android:icon="@null"
             android:screenOrientation="portrait"
             android:theme="@style/ThemeReg" />
 
         <activity
-            android:name="com.project.bluepandora.blooddonation.activities.FeedbackActivity"
+            android:name=".activities.FeedbackActivity"
             android:icon="@null"
             android:screenOrientation="portrait"
             android:theme="@style/ThemeFeedback" />
 
         <activity
-            android:name="com.project.bluepandora.blooddonation.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:icon="@null"
             android:screenOrientation="portrait"
             android:theme="@style/ThemeFeed" />
