--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.project.bluepandora.donatelife"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.1">
 
     <uses-sdk
         android:minSdkVersion="4"
@@ -86,6 +86,11 @@
             android:icon="@null"
             android:screenOrientation="portrait"
             android:theme="@style/ThemeFeed" />
+        <activity
+            android:name=".activities.AboutActivity"
+            android:icon="@null"
+            android:screenOrientation="portrait"
+            android:theme="@style/ThemeAbout" />
         <activity
             android:name=".activities.SettingsActivity"
             android:icon="@null"
