--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.project.bluepandora.donatelife"
     android:versionCode="1"
-    android:versionName="1.1">
+    android:versionName="@string/app_version">
 
     <uses-sdk
         android:minSdkVersion="4"
@@ -54,13 +54,8 @@
             android:theme="@style/Theme.AppCompat.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <meta-data
-                android:name="com.google.android.maps.v2.API_KEY"
-                android:value="AIzaSyBZ5kDCzgQOSJd4ZcHNRt_HOLsPa6aZcw8" />
         </activity>
         <activity
             android:name=".activities.LogInActivity"
@@ -89,6 +84,7 @@
         <activity
             android:name=".activities.AboutActivity"
             android:icon="@null"
+            android:label="About"
             android:screenOrientation="portrait"
             android:theme="@style/ThemeAbout" />
         <activity
