--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
     <application
         android:name=".application.AppController"
         android:allowBackup="true"
-        android:configChanges="keyboardHidden|orientation"
+        android:configChanges="keyboardHidden|orientation|locale"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
